5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1771_3121.log
== TEST (2019-05-29 22:51:16) 
-- CODE:
from numpy import *
e=array(int(input("jogadas de eusapia: ")))
b=array(int(input("jogadas de barsanulfo: ")))

print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:52:38) 
-- CODE:
from numpy import *
e=array(eval(int(input("jogadas de eusapia: "))))


print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:53:25) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas de eusapia: ")))


print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:53:43) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas de eusapia: ")))


print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:30:12) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas de eusapia: ")))
b=array(eval(input("jogadas de barsanulfo: ")))
ev=0
bv=0
i=0
print(len(e))
while(i<len(e) and i<len(b))
	if(b[i]==e[i]):
		i=i+1
	elif(b[i]==11 and e[i]==22):
		ev=ev+1
		i=i+1
	elif(b[i]==11 and e[i]==33):
		bv=bv+1
		i=i+1
	elif(b[i]==22 and e[i]==33):
		ev=ev+1
		i=i+1
	elif(e[i]==11 and b[i]==22):
		bv=bv+1
		i=i+1
	elif(e[i]==11 and b[i]==33):
		ev=ev+1
		i=i+1
	elif(e[i]==22 and b[i]==33):
		bv=bv+1
		i=i+1
	elif(ev==bv):
		print("EMPATE")
	elif(ev>bv):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
	

-- ERROR:
File "XXXX", line 8
    while(i<len(e) and i<len(b))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:30:49) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas de eusapia: ")))
b=array(eval(input("jogadas de barsanulfo: ")))
ev=0
bv=0
i=0
print(len(e))
while(i<len(e) and i<len(b)):
	if(b[i]==e[i]):
		i=i+1
	elif(b[i]==11 and e[i]==22):
		ev=ev+1
		i=i+1
	elif(b[i]==11 and e[i]==33):
		bv=bv+1
		i=i+1
	elif(b[i]==22 and e[i]==33):
		ev=ev+1
		i=i+1
	elif(e[i]==11 and b[i]==22):
		bv=bv+1
		i=i+1
	elif(e[i]==11 and b[i]==33):
		ev=ev+1
		i=i+1
	elif(e[i]==22 and b[i]==33):
		bv=bv+1
		i=i+1
	elif(ev==bv):
		print("EMPATE")
	elif(ev>bv):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:33:54) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas de eusapia: ")))
b=array(eval(input("jogadas de barsanulfo: ")))
ev=0
bv=0
i=0
print(len(e))
while(i<len(e) and i<len(b)):
	if(b[i]==e[i]):
		i=i+1
	elif(b[i]==11 and e[i]==22):
		ev=ev+1
		i=i+1
	elif(b[i]==11 and e[i]==33):
		bv=bv+1
		i=i+1
	elif(b[i]==22 and e[i]==33):
		ev=ev+1
		i=i+1
	elif(e[i]==11 and b[i]==22):
		bv=bv+1
		i=i+1
	elif(e[i]==11 and b[i]==33):
		ev=ev+1
		i=i+1
	elif(e[i]==22 and b[i]==33):
		bv=bv+1
		i=i+1
if(ev==bv):
	print("EMPATE")
elif(ev>bv):
	print("EUSAPIA")
else:
	print("BARSANULFO")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:35:27) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas de eusapia: ")))
b=array(eval(input("jogadas de barsanulfo: ")))
ev=0
bv=0
i=0
print(len(e))
while(i<len(e) and i<len(b)):
	if(b[i]==e[i]):
		i=i+1
	elif(b[i]==11 and e[i]==22):
		ev=ev+1
		i=i+1
	elif(b[i]==11 and e[i]==33):
		bv=bv+1
		i=i+1
	elif(b[i]==22 and e[i]==33):
		ev=ev+1
		i=i+1
	elif(e[i]==11 and b[i]==22):
		bv=bv+1
		i=i+1
	elif(e[i]==11 and b[i]==33):
		ev=ev+1
		i=i+1
	elif(e[i]==22 and b[i]==33):
		bv=bv+1
		i=i+1
if(ev==bv):
	print("EMPATE")
elif(ev>bv):
	print("EUSAPIA")
else:
	print("BARSANULFO")
	

-- EXECUTION TIME:
0.368855
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
